tests/error/comptime/pointer_arithmetic04.bz
function test()
{
	(consteval {
		let i = 0;
		&i - 1;
	});
}
